# local-ai-assistant

./: .env  .gitignore  LICENSE  README.md  get_dependencies.py  ingest.py  pyproject.toml  query.py  watch.py
local-ai/: get_dependencies.py  ingest.py  query.py  watch.py
local-ai/lib/: aggregating.py  assistants.py  chat.py  chunking.py  context.py  db.py  embeddings.py  ingest.py  log.py  ollama.py  processing.py  qdrant.py  types.py
parsers/typescript/: package-lock.json  package.json  parser.js
