[project]
name = "local-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Junell",email = "tim.junell@reaktor.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "qdrant-client>=1.12.2",
    "tiktoken>=0.8.0",
    "gradio (>=5.10.0,<6.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
